Implement /audio endpoint with cdrId
