# swagger_server/swagger/swagger.yaml
@@ -2,10 +2,10 @@ openapi: 3.0.0
 info:
   title: Data Analytics API
   description: Data Analytics API specification developed in-house at xFlow Research.
-  version: 0.3.0
+  version: 0.4.0
 servers:
-- url: /v1alpha3
-  description: Version 1 alpha version 3 for the Data Analytics API.
+- url: /v1alpha4
+  description: Version 1 alpha version 4 for the Data Analytics API.
 paths:
   /calls:
     get:
@@ -42,7 +42,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CDRList'
-      x-openapi-router-controller: swagger_server.controllers.cdr_controller
+      x-openapi-router-controller: swagger_server.controllers.default_controller
   /calls/{cdrId}:
     get:
       summary: Return a list of Call Data Records (CDRs).
@@ -67,7 +67,7 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/CDR'
-      x-openapi-router-controller: swagger_server.controllers.cdr_controller
+      x-openapi-router-controller: swagger_server.controllers.default_controller
   /pcap:
     get:
       summary: Return a PCAP of a call
@@ -114,6 +114,41 @@ paths:
                 format: binary
                 x-content-type: application/octet-stream
       x-openapi-router-controller: swagger_server.controllers.pcap_controller
+  /audio/{cdrId}:
+    get:
+      summary: Return the Audio file of a call identified with cdrId
+      description: This API endpoint identifies a call with the given cdrId and then
+        provides the audio file of the decoded audio of the VoIP call in WAV format.
+      operationId: audio_cdr_id_get
+      parameters:
+      - name: cdrId
+        in: path
+        description: CDR-ID of the call to identify it.
+        required: true
+        style: simple
+        explode: false
+        schema:
+          minimum: 1
+          type: integer
+          format: int64
+      responses:
+        "200":
+          description: A call with was identified with the given CDR-ID and the decoded
+            payload of the call is being returned to the caller.
+          headers:
+            Content-Disposition:
+              description: The filename of the audio file that is being returned.
+              style: simple
+              explode: false
+              schema:
+                type: string
+          content:
+            audio/x-wav:
+              schema:
+                type: object
+                format: binary
+                x-content-type: audio/x-wav
+      x-openapi-router-controller: swagger_server.controllers.audio_controller
 components:
   schemas:
     CDRList:
